kubernetes/k8s/sample-server-gcp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: <app-name>
    env: <env>
  name: <app-name>
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: <app-name>
      eng: <env>
  template:
    metadata:
      labels:
        app: <app-name>
        env: <env>
      name: <app-name>
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 2001
        runAsGroup: 2002
        fsGroup: 2003
      imagePullSecrets:
        - name: <secret-store>
      containers:
      - name: <app-name>
        image: <Image>
        imagePullPolicy: Always
        ports:
        - containerPort: <Port>
          protocol: TCP
        resources:
          requests:
            cpu: "20m"
            memory: 210Mi
          limits:
            cpu: "50m"
            memory: 250Mi
        readinessProbe:
          httpGet:
            port: <port>
            path: /<readiness-probe>
        volumeMounts:
          - name: <secret-name>
            mountPath: /secrets/gcpstorage/storage
            readOnly: true
      volumes: 
        - emptyDir:
            medium: Memory
          name: var-log-for-nginx
        - emptyDir:
            medium: Memory
          name: var-cache-for-nginx
        - emptyDir:
            mediume: Memory
          name: home-for-nginx
        - name: <secret-name>
          secret:
            secretName: <secret-name>
