kubernetes/k8s/sample-server-gcp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <app-name>
  labels:
    app: <app-name>
spec:
  selector:
    app: <app-name>
  ports:
  - port: <Port>
    targetPort: <Target Port>
  type: ClusterIP
