kubernetes/k8s/sample-server-gcp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <app-name>-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: <FQDN>-global-ip
    kubernetes.io/ingress.allow-http: "false"
  labels:
    name: <app-name>-ingress
    env: <env>
spec:
  defaultBackend:
    service:
      name: <Service>
      port:
        number: <port>
  rules:
  - host: <FQDN>
    http:
      paths:
      - path: /<path>
        pathType: Prefix
        backend:
          service:
            name: <Service>
            port: 
              number: <Port>
      - path: /<path>/<path>
        pathType: Prefix
        backend:
          service:
            name: <Service>
            port:
              number: <Port>
      - path:
        pathType: ImplementationSpecific
        backend:
          service:
            name: <Service>
            port:
              number: <Port>
  tls:
  - hosts:
    - <FQDN>
    secretName: <secret-name>
